--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,9 @@
                 "input": "src/global.scss"
               }
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/sample.js"
+            ]
           },
           "configurations": {
             "production": {
